--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,4 @@
-body{
+/* body{
     background-color:#FDF5E6;
     font-family: Optima, sans-serif;
 }
@@ -23,4 +23,4 @@ div{
     margin-bottom:40px;
     margin-left:40px;
     margin-right:40px;
-}
+} */
