--- a/src/style.css
+++ b/src/style.css
@@ -4,75 +4,64 @@ body{
     margin-top:0;
 }
 header{
-    font-family: small-caps;
+
     width: 100%;
-    background-color: #CEE3F6;
-    color: #0B4C5F;
-    margin-top:0;
-    padding-left: 5%;
-    padding-top: 1%;
-    padding-bottom: 0%;
     height: 70px;
-    justify-content: center;
-    font-family: 'Anton', sans-serif;
-    perspective: 1000px; 
-    perspective-origin: 200px 40px;
+
 }
-section{
-    width: 90%;
-    margin-left: 10%;
-}
-h1{
+#title{
+    background-color:	#FFEFD5;
+    font-family: 'Bowlby One SC', cursive;
+    padding-top: 1%;
     padding-bottom: 1%;
 }
+
 #list{
     width: 55%;
     height: 30px;
     margin-top: 1%;
     margin-bottom: 1%;
-    font-style: Poppins;
-    background-color: #F2F2F2;
+    background-color: #FFFFFF;
+    font-family: 'Open Sans', sans-serif;
 }
-#space{
-    width: 20%;
-}
+
 .inputText{
-    width: 80%;   
+    background-color:#FFFFFF;
+    width: 80%;
     min-height: 150px;
     max-height: 300px;
     border-radius: 15px;
-    text-transform: 200%;
-    font-size: 110%;
-    padding: 10px; 
-    height: 18%;
-    color: #FFFFFF; 
-    background-color: #0A2A29;
-    padding-bottom: 2%;
+    padding: 10px;
 }
 #buttonStart{
-    width: 9.5%;
+    width: 6%;
     height: 30px;
+    border-radius: 15px;
+
 }
+.button {
+    padding: 1%;
+    margin-top: 1%;
+    margin-right:18%;
+    width: 20%;
+    height: 30px;
+    background-color:	#FFFFFF;
+    padding-bottom: 2%;
+    font-family: 'Raleway', sans-serif;
+    font-weight: bold;
+    float:right;
+    }
 #offset{
     width: 15%;
     height: 25px;
-    text-align: right;
 }
 footer
 {
     width:100%;
     height:8%;
     bottom: 0;
-    background-color:#CEE3F6;
+    background-color:	#FFEFD5;
+    font-family: 'Montserrat', sans-serif;
+    text-align:center;
     position: fixed; 
-}
-.button {
-margin-top: 1%;
-width: 30%;
-height: 30px;
--webkit-appearance: none;
--moz-appearance: none;
-appearance: none;
-background-color: #D8D8D8;
-padding-bottom: 2%;
 }
