--- a/src/style.css
+++ b/src/style.css
@@ -1,20 +1,30 @@
 body{
-    background-color:  #FFFFFF;
+     /*background-color: 	#F5F5F5;*/
     font-family: Optima, sans-serif;
-    margin-top:0;
+    margin-top:1%;
+    margin-bottom:25%;
+
 }
 header{
+    background-color: #66CDAA;
     width: 100%;
-    height: 70px;
+    height: 1%;
+    margin-top:0;
+
+
 
 }
 #title{
-    background-color:	#FFEFD5;
-    font-family: 'Righteous', cursive;
-    padding-top: 1%;
-    padding-bottom: 1%;
+    margin:0;
+    font-family: 'Bungee Shade', cursive;
+    width:60%;
 }
-
+#wapp{
+    width:5%;
+    height:5%;
+    float:right;
+    padding-top: 0.5%;
+}
 #list{
     width: 55%;
     height: 30px;
@@ -25,6 +35,7 @@ header{
 }
 
 .inputText{
+    
     background-color:#FFFFFF;
     width: 80%;
     min-height: 150px;
@@ -32,11 +43,13 @@ header{
     border-radius: 15px;
     padding: 10px;
     font-family: 'Montserrat', sans-serif;
+    font-size:120%;
 }
 #buttonStart{
-    width: 6%;
+    width: 10%;
     height: 30px;
     border-radius: 15px;
+    background-color:	#FFFFFF;
     font-family: 'Raleway', sans-serif;
 
 }
@@ -44,7 +57,7 @@ header{
     padding: 1%;
     margin-top: 1%;
     margin-right:18%;
-    margin-bottom:2%;
+    margin-bottom:1%;
     width: 20%;
     height: 30px;
     background-color:	#FFFFFF;
@@ -61,7 +74,8 @@ header{
 footer
 {
     width:100%;
-    height:8%;
+    height:6%;
+    margin-top:2%;
     bottom: 0;
     background-color:	#FFEFD5;
     font-family: 'Montserrat', sans-serif;
