--- a/src/style.css
+++ b/src/style.css
@@ -1,84 +1,95 @@
 body{
-     /*background-color: 	#F5F5F5;*/
-    font-family: Optima, sans-serif;
-    margin-top:1%;
-    margin-bottom:25%;
-
-}
-header{
-    background-color: #66CDAA;
-    width: 100%;
-    height: 1%;
-    margin-top:0;
-
-
-
-}
-#title{
-    margin:0;
-    font-family: 'Bungee Shade', cursive;
-    width:60%;
-}
-#wapp{
-    width:5%;
-    height:5%;
-    float:right;
-    padding-top: 0.5%;
-}
-#list{
-    width: 55%;
-    height: 30px;
-    margin-top: 1%;
-    margin-bottom: 1%;
     background-color: #FFFFFF;
-    font-family: 'Open Sans', sans-serif;
-}
-
-.inputText{
-    
-    background-color:#FFFFFF;
-    width: 80%;
-    min-height: 150px;
-    max-height: 300px;
-    border-radius: 15px;
-    padding: 10px;
-    font-family: 'Montserrat', sans-serif;
-    font-size:120%;
-}
-#buttonStart{
-    width: 10%;
-    height: 30px;
-    border-radius: 15px;
-    background-color:	#FFFFFF;
-    font-family: 'Raleway', sans-serif;
-
-}
-.button {
-    padding: 1%;
-    margin-top: 1%;
-    margin-right:18%;
-    margin-bottom:1%;
-    width: 20%;
-    height: 30px;
-    background-color:	#FFFFFF;
-    padding-bottom: 2%;
-    font-family: 'Raleway', sans-serif;
-    font-weight: bold;
-    float:right;
+       font-family: Optima, sans-serif;
+       margin-bottom:25%;
+       margin-top:0;
+       margin-left:0;
+       margin-right: 0;
     }
-#offset{
-    width: 15%;
-    height: 25px;
-    font-family: 'Open Sans', sans-serif;
-}
-footer
-{
-    width:100%;
-    height:6%;
-    margin-top:2%;
-    bottom: 0;
-    background-color:	#FFEFD5;
-    font-family: 'Montserrat', sans-serif;
-    text-align:center;
-    position: fixed; 
-}
+    header{
+       background-color: #66CDAA;
+       width: 100%;
+       height: 6%;
+       margin-top:0;
+       padding-top: 0.01%;
+       padding-bottom: 0.01%;
+    }
+    #title{
+       margin-left:1.5%;
+       font-family: 'Comfortaa', cursive;
+       color: #000000;
+       width:60%;
+    }
+    #wapp{
+       float:right;
+       padding-top: 0.5%;
+    }
+    #container{
+        margin-left:1%;
+    }
+    #list{
+       width: 55%;
+       height: 30px;
+       margin-top: 1%;
+       margin-bottom: 1%;
+       background-color: #FFFFFF;
+       font-family: 'Open Sans', sans-serif;
+       border-width: 2.3px;
+    }
+    .inputText{
+       
+       background-color:#FFFFFF;
+       border-color: #DCDCDC;
+       border-width:2.3px;
+       width: 80%;
+       min-height: 150px;
+       max-height: 300px;
+       border-radius: 15px;
+       padding: 10px;
+       font-family: 'Montserrat', sans-serif;
+       font-size:120%;
+    }
+    #textTwo{
+        background-color: #F0FFFF;
+        border-color: #FFFFFF;
+    }
+    #buttonStart,  #buttonWithCipher {
+       width: 5%;
+       height: 30px;
+       border-radius: 15px;
+       background-color:    #E0FFFF;
+       font-family: 'Raleway', sans-serif;
+       border-width: 1px;
+    }
+    #buttonWithCipher{
+        width:8%;
+    }
+    .button {
+       padding: 1%;
+       margin-top: 1%;
+       margin-right:18%;
+       margin-bottom:1%;
+       width: 20%;
+       height: 30px;
+       background-color:    #DCDCDC;
+       padding-bottom: 2%;
+       font-family: 'Raleway', sans-serif;
+       font-weight: bold;
+       float:right;
+       }
+    #offset{
+       width: 15%;
+       height: 25px;
+       font-family: 'Open Sans', sans-serif;
+       border-width:2.3px;
+    }
+    footer
+    {
+       width:100%;
+       margin-top:2%;
+       bottom: 0;
+       background-color:    #66CDAA;
+       font-family: 'Montserrat', sans-serif;
+       text-align:center;
+       position: fixed; 
+    }
