--- a/src/style.css
+++ b/src/style.css
@@ -20,10 +20,7 @@ body{
        color: #000000;
        width:60%;
     }
-    #wapp{
-       float:right;
-       padding-top: 0.5%;
-    }
+
     #container{
         margin-left:1%;
     }
@@ -82,6 +79,10 @@ body{
        height: 25px;
        font-family: 'Open Sans', sans-serif;
        border-width:2.3px;
+    }
+    #offsetText{
+        font-family: 'Open Sans', sans-serif;
+        width:40%;
     }
     footer
     {
